did some stylings

--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/atom-one-dark.min.css" />
 
+
     {% block quill %}
     {% endblock %}
 
@@ -29,14 +30,19 @@
             theme: {
                 extend: {
                     colors: {
-                        dark_1: '#101214',
+                        dark_1: '#0E1113',
                         dark_2: '#05090B',
-                        dark_3: '#0E1113',
+                        dark_3: '#101214',
+                        dark_4: '#333D42',
+                        dark_5: "#161A1D",
+                        dark_6: "#181C1F",
                         gray_1: '#3C4244',
                         gray_2: "#2B3336",
                         white_1: "#F3F3F2",
                         white_2: "#717981",
                         white_3: "#889375",
+                        button_red: "#C82C00",
+                        button_red_hover: "#A61F00",
                         button_gray: "#E5EBEE",
                         button_gray_hover: "#DDE3E6",
                         button_blue: "#0A449B",
