--- a/templates/components/leftbar.html
+++ b/templates/components/leftbar.html
@@ -1,6 +1,6 @@
 {% load static %}
 <div
-    class="flex flex-col gap-2 overflow-auto border-r border-[#ffffff33] p-3 left-0 text-sm top-[10vh] h-[90vh] w-[15%] fixed border border-r-dark_3 dark:bg-dark_3 dark:border-gray_1">
+    class="flex flex-col gap-2 overflow-auto p-3 left-0 text-sm top-[10vh] h-[90vh] w-[15%] fixed border-r border-dark_3 dark:bg-dark_3 dark:border-gray_1 shadow-md">
     <div>
         <a href="{% url 'dashboard' %}"
             class="hover:bg-button_gray_hover dark:hover:bg-gray_1 flex flex-row gap-3 justify-start items-center px-3 py-2 rounded-lg w-full">
