--- a/templates/components/posts.html
+++ b/templates/components/posts.html
@@ -2,7 +2,10 @@
 {% for post in posts %}
 <div class="flex flex-col gap-3 border-b border-t p-3">
     <div class="flex flex-row items-end">
-        <img src="{{ post.community.avatar }}" class="w-8 h-8 mr-2 rounded-full" alt="">
+        <div class="rounded-full w-6 h-6 bg-gray-200 border border-black">
+            <img class="w-full h-full rounded-full object-cover" src="{{ post.community.avatar }}"
+                alt="Community avatar">
+        </div>
         <p>r/{{ post.community.name }}</p>
         *
         <p>{{ post.created_at }}</p>
