--- a/templates/components/sign_in.html
+++ b/templates/components/sign_in.html
@@ -1,44 +1,41 @@
 <script src="https://accounts.google.com/gsi/client" async></script>
-<div id="loginModal" class="modal fixed inset-0 flex items-center justify-center bg-black bg-opacity-50 hidden">
-    <div class="bg-[#0F1A1C] text-white rounded-lg p-6 w-[500px]">
-        <h1 class="font-bold text-2xl">Login</h1>
-        <p class="mb-10 ml-10 mr-10 mt-5 text-sm">By continuing, you agree to our User Agreement and acknowledge that
-            you understand the Privacy Policy.</p>
-        <div class="w-full flex items-center justify-center">
 
-            <form method="POST" action="{% url 'sign_in' %}" class="flex flex-col justify-center w-[70%]">
-                {% csrf_token %}
-                <div class="flex flex-col gap-4">
-                    <input name="email_or_username" class="h-10 px-4 rounded-xl text-black" type="text"
-                        placeholder="Email or Username" required>
-                    <input name="password" class="border h-10 px-4 rounded-xl text-black" type="password"
-                        placeholder="Password" required>
-                </div>
-                <div class="flex flex-row gap-2 mt-2 mb-3">
-                    <p class="text-sm">Don't have an account?</p>
-                    <a class="text-sm text-blue-500 cursor-pointer"
-                        onclick="closeModal('loginModal'); openModal('registerModal');">Sign up now</a>
-                </div>
+<div id="sign_in_modal" aria-hidden="true"
+    class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full">
+    <div class="relative w-full max-w-2xl max-h-full w-1/3">
+        <form method="POST" action="{% url 'sign_in' %}"
+            class="dark:text-white_1 text-black flex flex-col gap-4 justify-center bg-dark_5 py-10 px-16 rounded-2xl">
+            {% csrf_token %}
+            <h1 class="text-xl font-bold">Login</h1>
+            <div class="flex flex-col gap-4">
+                <input name="email_or_username" class="bg-dark_4 h-10 px-4 border-0 rounded-xl text-white_1" type="text"
+                    placeholder="Email or username" required>
+                <input name="password" class="bg-dark_4 h-10 px-4 border-0 rounded-xl text-white_1" type="password"
+                    placeholder="Password" required>
+            </div>
+            <span class="flex flex-row gap-1 text-xs">
+                <p>Don't have an account?</p>
 
-                <div class="flex flex-col gap-4">
-                    <button type="submit"
-                        class="rounded-3xl border px-3 py-2 w-full bg-blue-500 text-white transition-all duration-300 ease-in-out hover:bg-blue-800 hover:text-white">
-                        Login
-                    </button>
+                <button data-modal-target="sign_up_modal" data-modal-toggle="sign_up_modal"
+                    data-modal-hide="sign_in_modal" class="text-blue-500 cursor-pointer">Sign up now</button>
+            </span>
 
-                    <div class="w-full flex flex-row justify-center">
-                        <div id="g_id_onload"
-                            data-client_id="245316070777-i13g0d10qdahvm5egq33dhifn3gqesi1.apps.googleusercontent.com"
-                            data-context="signin" data-ux_mode="popup"
-                            data-login_uri="http://localhost:8000/auth-receiver" data-auto_prompt="false">
-                        </div>
+            <div class="flex flex-col gap-4">
+                <button type="submit"
+                    class="rounded-3xl px-3 py-2 w-full bg-button_red text-white font-md transition-all duration-300 ease-in-out hover:bg-button_red_hover hover:text-white">
+                    Login
+                </button>
 
-                        <div class="g_id_signin" data-type="standard" data-shape="pill" data-text="signin_with"
-                            data-size="large" data-logo_alignment="center" data-theme="outline">
-                        </div>
+                <div class="w-full flex flex-row justify-center">
+                    <div id="g_id_onload"
+                        data-client_id="245316070777-i13g0d10qdahvm5egq33dhifn3gqesi1.apps.googleusercontent.com"
+                        data-context="signin" data-ux_mode="popup" data-login_uri="http://localhost:8000/auth-receiver"
+                        data-auto_prompt="false">
                     </div>
+                    <div class="g_id_signin" data-type="standard" data-shape="pill" data-text="signin_with"
+                        data-size="large" data-logo_alignment="center" data-theme="outline"></div>
                 </div>
-            </form>
-        </div>
+            </div>
+        </form>
     </div>
 </div>
