--- a/templates/components/leftbar.html
+++ b/templates/components/leftbar.html
@@ -34,7 +34,7 @@
             class="peer-checked:max-h-[1000px] peer-checked:opacity-100 max-h-0 opacity-0 transition-transform duration-300 overflow-hidden flex flex-col gap-2">
             <button
                 class="hover:bg-button_gray_hover dark:hover:bg-gray_1 flex flex-row gap-3 justify-start items-center px-3 py-2 rounded-lg w-full"
-                data-modal-target="createCommunityModal" data-modal-toggle="createCommunityModal">
+                data-modal-target="create_community_modal" data-modal-toggle="create_community_modal">
                 <svg fill="currentColor" height="20" viewBox="0 0 20 20" width="16" xmlns="http://www.w3.org/2000/svg">
                     <path d="M19 9.375h-8.375V1h-1.25v8.375H1v1.25h8.375V19h1.25v-8.375H19v-1.25Z"></path>
                 </svg>
@@ -56,9 +56,11 @@
         </div>
         {%endif%}
     </div>
-
 </div>
+{% if user.is_authenticated %}
 {% include 'components/create_community.html'%}
+{% endif %}
+
 
 <script>
     function toggle_dropdown_cap(event) {
