--- a/templates/components/sign_in.html
+++ b/templates/components/sign_in.html
@@ -4,19 +4,30 @@
     class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full">
     <div class="relative w-full max-w-2xl max-h-full w-1/3">
         <form method="POST" action="{% url 'sign_in' %}"
-            class="dark:text-white_1 text-black flex flex-col gap-4 justify-center bg-dark_5 py-10 px-16 rounded-2xl">
+            class="bg-white dark:text-white_1 dark:bg-dark_5 text-black flex flex-col gap-4 justify-center  py-10 px-16 rounded-2xl">
             {% csrf_token %}
             <h1 class="text-xl font-bold">Login</h1>
             <div class="flex flex-col gap-4">
-                <input name="email_or_username" class="bg-dark_4 h-10 px-4 border-0 rounded-xl text-white_1" type="text"
-                    placeholder="Email or username" required>
-                <input name="password" class="bg-dark_4 h-10 px-4 border-0 rounded-xl text-white_1" type="password"
-                    placeholder="Password" required>
+                <div class="relative">
+                    <input name="email_or_username" id="sign_in_email_input"
+                        class="bg-white_1 dark:bg-dark_6 block px-2.5 pb-2.5 pt-4 w-full text-sm text-gray-900 rounded-lg border-1 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer"
+                        placeholder=" " type="text">
+                    <label for="sign_in_email_input"
+                        class="absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-4 scale-75 top-4 z-10 origin-[0] start-2.5 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-4 rtl:peer-focus:translate-x-1/4 rtl:peer-focus:left-auto">Email
+                        or username</label>
+                </div>
+                <div class="relative">
+                    <input id="sign_in_password" name="password"
+                        class="bg-white_1 dark:bg-dark_6 block px-2.5 pb-2.5 pt-4 w-full text-sm text-gray-900 rounded-lg border-1 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer"
+                        type="password" placeholder=" ">
+                    <label for="sign_in_password"
+                        class="absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-4 scale-75 top-4 z-10 origin-[0] start-2.5 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-4 rtl:peer-focus:translate-x-1/4 rtl:peer-focus:left-auto">Password</label>
+                </div>
             </div>
             <span class="flex flex-row gap-1 text-xs">
                 <p>Don't have an account?</p>
 
-                <button data-modal-target="sign_up_modal" data-modal-toggle="sign_up_modal"
+                <button type="button" data-modal-target="sign_up_modal" data-modal-toggle="sign_up_modal"
                     data-modal-hide="sign_in_modal" class="text-blue-500 cursor-pointer">Sign up now</button>
             </span>
 
