--- a/templates/community.html
+++ b/templates/community.html
@@ -69,7 +69,7 @@
 
 
                 <div class='flex flex-row items-center gap-2'>
-                    <a href="{% url 'submit' %}"
+                    <a href="TODO"
                         class='bg-button_gray hover:bg-button_gray_hover dark:bg-dark_1 dark:hover:bg-dark_2 flex flex-row gap-2 rounded-2xl border border-white px-3 py-2 items-center'>
                         <svg rpl="" fill="currentColor" height="20" icon-name="add-outline" viewBox="0 0 20 20"
                             width="16" xmlns="http://www.w3.org/2000/svg">
