--- a/templates/components/account/sign_in.html
+++ b/templates/components/account/sign_in.html
@@ -3,7 +3,7 @@
 <div id="sign_in_modal" aria-hidden="true"
     class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full">
     <div class="relative w-full max-w-2xl max-h-full w-1/3">
-        <form method="POST" action="{% url 'sign_in' %}"
+        <form method="POST" action="{% url 'account:sign_in' %}"
             class="bg-white dark:text-white_1 dark:bg-dark_5 text-black flex flex-col gap-4 justify-center  py-10 px-16 rounded-2xl">
             {% csrf_token %}
             <h1 class="text-xl font-bold">Login</h1>
@@ -40,8 +40,8 @@
                 <div class="w-full flex flex-row justify-center">
                     <div id="g_id_onload"
                         data-client_id="245316070777-i13g0d10qdahvm5egq33dhifn3gqesi1.apps.googleusercontent.com"
-                        data-context="signin" data-ux_mode="popup" data-login_uri="http://localhost:8000/auth-receiver"
-                        data-auto_prompt="false">
+                        data-context="signin" data-ux_mode="popup"
+                        data-login_uri="http://localhost:8000/account/auth-receiver" data-auto_prompt="false">
                     </div>
                     <div class="g_id_signin" data-type="standard" data-shape="pill" data-text="signin_with"
                         data-size="large" data-logo_alignment="center" data-theme="outline"></div>
