--- a/templates/components/account/sign_up.html
+++ b/templates/components/account/sign_up.html
@@ -2,7 +2,7 @@
 <div id="sign_up_modal"
     class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full">
     <div class="relative w-full max-w-2xl max-h-full w-1/3">
-        <form id="sign_up_form" method="POST" action="{% url 'sign_up' %}"
+        <form id="sign_up_form" method="POST" action="{% url 'account:sign_up' %}"
             class="bg-white dark:text-white_1 dark:bg-dark_5 dark:text-white_1 text-black justify-center py-10 px-16 rounded-2xl relative"
             enctype='multipart/form-data'>
             {% csrf_token %}
@@ -24,7 +24,7 @@
                         <div id="g_id_onload"
                             data-client_id="245316070777-i13g0d10qdahvm5egq33dhifn3gqesi1.apps.googleusercontent.com"
                             data-context="signin" data-ux_mode="popup"
-                            data-login_uri="http://localhost:8000/auth-receiver" data-auto_prompt="false">
+                            data-login_uri="http://localhost:8000/account/auth-receiver" data-auto_prompt="false">
                         </div>
                         <div class="g_id_signin" data-type="standard" data-shape="pill" data-text="continue_with"
                             data-size="large" data-logo_alignment="center" data-theme="outline">
@@ -177,7 +177,7 @@
     async function checkAvailability(type, value) {
         check_availability_spinner.classList.remove("hidden");
         let result
-        await fetch(`/check_availability/?${type}=${value}`)
+        await fetch(`/account/check_availability/?${type}=${value}`)
             .then(response => response.json())
             .then(data => {
                 check_availability_spinner.classList.add("hidden");
