--- a/templates/components/community/edit_community_appearance.html
+++ b/templates/components/community/edit_community_appearance.html
@@ -1,4 +1,4 @@
-<form id="edit_community_appearance" action="{% url 'edit_community_appearance' %}" method="POST"
+<form id="edit_community_appearance" action="{% url 'community:edit_community_appearance' %}" method="POST"
     enctype="multipart/form-data"
     class="fixed w-[350px] flex flex-col gap-4 left-[3%] border shadow-md bg-white p-5 rounded-lg duration-500 transform top-[100%] dark:border-gray_1 dark:bg-dark_2">
     {% csrf_token %}
