--- a/templates/components/community/edit_community_topics.html
+++ b/templates/components/community/edit_community_topics.html
@@ -3,7 +3,7 @@
     class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full">
     <div class="relative p-4 w-full max-w-2xl max-h-full">
         <!-- Modal content -->
-        <form method="POST" action="{% url 'edit_community_topics' %}"
+        <form method="POST" action="{% url 'community:edit_community_topics' %}"
             class="relative bg-white rounded-lg shadow dark:bg-gray-700">
             {% csrf_token %}
             <!-- Modal header -->
