--- a/templates/components/community/edit_community_appearance.html
+++ b/templates/components/community/edit_community_appearance.html
@@ -27,8 +27,7 @@
                 </svg>
             </button>
 
-            <button type="button" onClick="set_is_editing(false); set_current_edit(null);" class="bg-button_gray hover:bg-button_gray_hover dark:bg-dark_1 dark:hover:bg-gray_2  rounded-full w-[40px] h-[40px] py-2 px-2 flex justify-center items-center
-                hover:bg-[#223237]">
+            <button type="button" onClick="set_is_editing(false); set_current_edit(null);" class="bg-button_gray hover:bg-button_gray_hover dark:bg-dark_1 dark:hover:bg-gray_2  rounded-full w-[40px] h-[40px] py-2 px-2 flex justify-center items-center hover:bg-[#223237]">
                 <svg rpl="" fill="currentColor" height="16" icon-name="close-outline" viewBox="0 0 20 20" width="16"
                     xmlns="http://www.w3.org/2000/svg">
                     <path
