--- a/templates/components/community/edit_community_topics.html
+++ b/templates/components/community/edit_community_topics.html
@@ -28,9 +28,10 @@
                     <input name="community_id" type="hidden" value="{{ community.id }}">
                     {% get_global_topics as all_topics %}
                     {% for topic in all_topics %}
-                    <div class="flex items-center mr-4 mb-2"> <!-- Add margins to create spacing -->
+                    <div class="flex items-center mr-4 mb-2">
                         <input type="checkbox" id="t-{{ topic.id }}" name="topics" value="{{ topic.id }}"
-                            class="peer hidden edit_topic_checkbox" {% if topic in topics %} checked {% endif %} />
+                            class="peer hidden edit_topic_checkbox" 
+                            {% if topic in topics %} checked {% endif %} />
                         <label for="t-{{ topic.id }}"
                             class="bg-button_gray dark:text-dark_1 rounded-xl ml-2 px-2 py-1 peer-checked:bg-blue-500 transition-colors cursor-pointer border-xl">
                             {{ topic.name }}
