fixed community route

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -6,7 +6,7 @@
     {% include 'components/leftbar.html'%}
 
     <div class="p-10 w-[85%] relative left-[15%]">
-        {% include 'components/posts.html' %}
+        {% include 'components/post/posts.html' %}
     </div>
 </div>
 {% endblock %}
