--- a/templates/community.html
+++ b/templates/community.html
@@ -85,8 +85,8 @@
             {% endif %}
         </div>
         <div class="flex flex-row gap-2">
-            <div class="w-[70%] border">
-
+            <div class="w-[70%]">
+                {% include 'components/post/posts.html' %}
             </div>
 
             <div
@@ -125,9 +125,7 @@
                 {%include 'components/community/community_topics.html'%}
                 {%include 'components/community/community_rules.html' %}
             </div>
-
         </div>
-
     </div>
 </div>
 
