--- a/templates/components/editor.html
+++ b/templates/components/editor.html
@@ -1,4 +1,4 @@
-<div id="standalone-container" class="max-w-[600px] w-full mx-auto">
+<div id="standalone-container" class="w-full">
     <div id="toolbar-container">
         <span class="ql-formats">
             <button class="ql-bold"></button>
