--- a/templates/components/community/edit_community_appearance.html
+++ b/templates/components/community/edit_community_appearance.html
@@ -6,7 +6,7 @@
         <input type="hidden" name="community_id" value="{{community.id}}">
         <div class='flex flex-row gap-2 items-center'>
             <button type="button" id="btn_navigate_back" onClick="set_current_edit(null)"
-                class="bg-button_gray hover:bg-button_gray_hover dark:bg-dark_2 dark:hover:bg-gray_2  rounded-full w-[40px] h-[40px] py-2 px-2 flex justify-center items-center hover:bg-[#223237] hidden">
+                class="bg-button_gray hover:bg-button_gray_hover dark:bg-dark_2 dark:hover:bg-gray_2  rounded-full w-[40px] h-[40px] py-2 px-2 flex justify-center items-center hidden">
                 <svg rpl="" fill="currentColor" height="16" icon-name="left-outline" viewBox="0 0 20 20" width="16"
                     xmlns="http://www.w3.org/2000/svg">
                     <path d="m13.058 19.442-9-9a.624.624 0 0 1 0-.884l9-9 .884.884L5.384 10l8.558 8.558-.884.884Z">
@@ -18,7 +18,7 @@
 
         <div class="flex flex-row gap-2">
             <button type="button" id="btn_hide_edit_control" onClick="toggle_edit_control()" class="bg-button_gray hover:bg-button_gray_hover dark:bg-dark_1 dark:hover:bg-gray_2 rounded-full
-                w-[40px] h-[40px] py-2 px-2 flex justify-center items-center hover:bg-[#223237]">
+                w-[40px] h-[40px] py-2 px-2 flex justify-center items-center">
                 <svg rpl="" class="" fill="currentColor" height="20" icon-name="caret-down-outline" viewBox="0 0 20 20"
                     width="20" xmlns="http://www.w3.org/2000/svg">
                     <path
@@ -27,7 +27,7 @@
                 </svg>
             </button>
 
-            <button type="button" onClick="set_is_editing(false); set_current_edit(null);" class="bg-button_gray hover:bg-button_gray_hover dark:bg-dark_1 dark:hover:bg-gray_2  rounded-full w-[40px] h-[40px] py-2 px-2 flex justify-center items-center hover:bg-[#223237]">
+            <button type="button" onClick="set_is_editing(false); set_current_edit(null);" class="bg-button_gray hover:bg-button_gray_hover dark:bg-dark_1 dark:hover:bg-gray_2  rounded-full w-[40px] h-[40px] py-2 px-2 flex justify-center items-center">
                 <svg rpl="" fill="currentColor" height="16" icon-name="close-outline" viewBox="0 0 20 20" width="16"
                     xmlns="http://www.w3.org/2000/svg">
                     <path
@@ -95,7 +95,7 @@
             <img src="">
             <div class='absolute bottom-0 right-0'>
                 <button type="button" onClick="remove_image()" class='bg-button_gray hover:bg-button_gray_hover dark:bg-dark_1 dark:hover:bg-gray_2  rounded-full w-[40px] h-[40px] py-2 px-2 flex justify-center
-                    items-center hover:bg-[#223237]'>
+                    items-center'>
                     <svg rpl="" fill="currentColor" height="16" icon-name="delete-outline" viewBox="0 0 20 20"
                         width="16" xmlns="http://www.w3.org/2000/svg">
                         <path
