--- a/templates/components/post/post_detail.html
+++ b/templates/components/post/post_detail.html
@@ -5,34 +5,49 @@
     {% include 'components/leftbar.html'%}
 
     <div class="p-10 w-[85%] relative left-[15%]">
-        <div class="flex flex-col gap-6">
-            <div class="flex flex-col gap-3">
-                <div class="flex flex-row items-center gap-2">
-                    <div class="rounded-full w-10 h-10 bg-gray-200 border border-black">
-                        <img class="w-full h-full rounded-full object-cover" src="{{ post.community.avatar }}"
-                            alt="Community avatar">
-                    </div>
-                    <div class="flex flex-col items-start justify-end gap-0 leading-none">
-                        <p class="font-medium">r/{{ post.community.name }}</p>
-                        <p class="text-xs">{{ post.user.username }}</p>
-                    </div>
-                    <p>{{ post.created_at }}</p>
+        <div class="flex flex-row justify-between">
+            <div class="flex flex-row gap-4 items-start w-[60%]">
+                <div>
+                    <button onclick="history.back()" type="button" class="bg-button_gray hover:bg-button_gray_hover dark:bg-dark_2 dark:hover:bg-gray_2 rounded-full w-[40px] h-[40px] py-2 px-2 flex justify-center items-center">
+                        <svg rpl="" fill="currentColor" height="16" icon-name="left-outline" viewBox="0 0 20 20" width="16"
+                            xmlns="http://www.w3.org/2000/svg">
+                            <path d="m13.058 19.442-9-9a.624.624 0 0 1 0-.884l9-9 .884.884L5.384 10l8.558 8.558-.884.884Z">
+                            </path>
+                        </svg>
+                    </button>
                 </div>
-                <h1 class="font-bold text-xl">{{ post.title }}</h1>
+                <div class="flex flex-col gap-6">
+                    <div class="flex flex-col gap-3">
+                        <div class="flex flex-row items-center gap-2">
+                            <div class="rounded-full w-10 h-10 bg-gray-200 border border-black">
+                                <img class="w-full h-full rounded-full object-cover" src="{{ post.community.avatar }}"
+                                    alt="Community avatar">
+                            </div>
+                            <div class="flex flex-col items-start justify-end gap-0 leading-none">
+                                <a href = "{% url 'community:community' post.community.name %}" class="font-medium text-sm">r/{{ post.community.name }}</a>
+                                <p class="text-xs">{{ post.user.username }}</p>
+                            </div>
+                            <p>•</p>
+                            <p>{{ post.created_at }}</p>
+                        </div>
+                        <h1 class="font-bold text-xl">{{ post.title }}</h1>
+                    </div>
+                    <span class="post-content">{{ post.content }}</span>
+                </div>
             </div>
-            <span class="post-content">{{ post.content }}</span>
+
+            <div class="w-[30%]">
+                {% include 'components/community/community_right_bar.html'%}
+            </div>
         </div>
     </div>
 </div>
-
-    <script>
-        document.addEventListener("DOMContentLoaded", function () {
-            const postContents = document.querySelectorAll('.post-content');
-            postContents.forEach(postContent => {
-                postContent.innerHTML = postContent.textContent;
-            });
+<script>
+    document.addEventListener("DOMContentLoaded", function () {
+        const postContents = document.querySelectorAll('.post-content');
+        postContents.forEach(postContent => {
+            postContent.innerHTML = postContent.textContent;
         });
-    </script>
-
-
+    });
+</script>
 {% endblock %}
